# dlpc

./: .gitignore  CMakeLists.txt  DBN.cpp  DBN.h  HiddenLayer.cpp  HiddenLayer.h  LogisticRegression.cpp  LogisticRegression.h  RBM.cpp  RBM.h  README.md  SdA.cpp  SdA.h  dA.cpp  dA.h  utils.h
benchmark/: CMakeLists.txt  testDBN.cpp  testLR.cpp  testRBM.cpp  testSdA.cpp  testdA.cpp
data/: get_data.cpp  read_pkg.py
test/: CMakeLists.txt  test.cpp  testDBN.cpp  testLR.cpp  testRBM.cpp  testSdA.cpp  testdA.cpp
